2001-06-29  Mumit Khan  <khan@nanotech.wisc.edu>

	* defun-int.h (DEFINE_FUN_INSTALLER_FUN{2,3}): New macros.
	(DEFINE_FUN_INSTALLER_FUN): Use.
	* dynamic-ld.cc ({STRINGIFY, STRINGIFY1}): New macros.
	(octave_dynamic_loader::mangle_name): Support dynamic linking
	for GNU v3 and Sun C++ ABI.

2001-06-26  Mumit Khan  <khan@nanotech.wisc.edu>

	* c-file-ptr-stream.h (c_file_ptr_buf::c_file_ptr_buf): Add GCC3
	libstdc++-v3 support.
	* load-save.cc (save_mat5_binary_element): Cast arguments to the
	correct type.
	(save_ascii_data): Eliminate compiler warning.
	* toplev.cc (system): Prefix std::.

2001-05-31  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-cx-mat.cc: Deleve unnecessary instantiation of assign function.
	* ov-re-mat.cc: Likewise.
	* ov-re-nd-array.cc: Likewise.
	* ov-str-mat.cc: Likewise.
	* ov-bool-mat.cc: Likewise.

	* load-save.cc (save_ascii_data): When saving string data, get raw
	string value for matrix row since there may be embedded nuls.

	* pt-mat.cc (Vstring_fill_char): No longer static.
	* pt-mat.h: Provide declaration.

2001-05-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octave.cc (initialize_pathsearch): Save initial value of the
	TEXMFDBS environment variable here.
	* toplev.cc (restore_texmfdbs_envvar): New function.
	(Fsystem): Set TEXMFDBS back to original value before running
	subprocesses.

2001-05-02  Mumit Khan  <khan@nanotech.wisc.edu>

	* Makefile.in (octave): Add $(FFTW_LIBS).

2001-04-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DLD-FUNCTIONS/sort.cc (mx_sort): Check for NaNs in comparisons.

2001-04-26  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (OCTAVE_LIBS): Delete $(LIBREADLINE) from the list.
	(octave): Delete TERMLIBS from link command.
	* oct-conf.h.in: Delete references to LIBREADLINE, TERMLIBS.
	* toplev.cc (octave_config_info): Delete entries for LIBREADLINE,
	TERMLIBS.

2001-04-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (install-lib): Don't use mk-libdir-link.